buildsys/cmake:
  o updated find module scripts
  o added support for using dyncall as sub-project (via *Config.cmake files)
    see details in README.CMake
  o fixes for msvc and ml
buildsys updates:
  o new simplified makefile system: Makefile.generic (works on GNU- and BSDmake)
  o experimental: support for sun's make as well: 'Makefile.embedded'
tests:
  o added syscall test
  o updates to resolve-self test (adding additional link flags to export symbols)

Version 0.6
building:
  o new build systems: CMake and Plan9's mk
  o buildsys/gmake tool chain update: pcc and iphone sdk
  o x64 bugfix: added "-fPIC" even for static libs
dynload updates: 
  o enum symbols update: Mach-O and Win64 (thanks Olivier)
  o numerous convenience changes to dynload interface (thanks Olivier)
  o added support for resolving application images itself
dyncall updates:
  o new platform support: arm/iphone (armv6), x86/Plan9
  o new mips calling conventions: oabi, n64 (both endian models)
  o cleanup: unexported functions in MASM files, b/c export not needed (thanks Olivier)
  o interface update: added error reporting facility 'dcGetError'
  o bugfix for ppc32/sysv: ellipsis calls were broken
  o interface update: added new abstract mode for ellipsis calls (DC_CALL_C_ELLIPSIS) 
docs:
  o comprehensive update
tests:
  o plain: split "plain" test up in C and C++ part
  o callbacksuite: added multiple configuration support for callback_suite

Version 0.5
o renamed arm9 stuff to arm32
o added non-EABI ABI for arm32 (before, EABI was the default implementation)
o added dyncallback support for x64/windows (thanks Olivier), x64/darwin, arm32/arm, arm32/thumb
o synced documentation again with current state of the source (lots of small changes)
o updated ruby binding to current state of signature string (still some features missing, though)
o added a couple of new options to configure scripts (e.g. prefix-bd, new targets, etc.)
o darwin universal binary support