@@ -1,4 +1,4 @@
-add_executable(plain_cxx test_main.cpp)
+add_executable(plain_cxx test_main.cc)
 target_link_libraries(plain_cxx dyncall_s)
 
 
