@@ -1,3 +1,3 @@
-add_executable(suite2 case.cpp main.cpp)
+add_executable(suite2 case.cc main.cc)
 target_link_libraries(suite2 dyncall_s)
 
