@@ -1,3 +1,3 @@
-add_executable(suite2_x86win32fast case.cpp main.cpp)
+add_executable(suite2_x86win32fast case.cc main.cc)
 target_link_libraries(suite2_x86win32fast dyncall_s)
 
