@@ -1,3 +1,3 @@
-add_executable(suite_floats case.cpp main.cpp)
+add_executable(suite_floats case.cc main.cc)
 target_link_libraries(suite_floats dyncall_s)
 
