@@ -1,4 +1,4 @@
-add_executable(suite_x86win32fast main.cpp case.cpp)
+add_executable(suite_x86win32fast main.cc case.cc)
 target_link_libraries(suite_x86win32fast dyncall_s)
 
 
